# name: test_deploy_vnfs
  <class 'dict'> {
    'descriptor': <class 'BaseDict'> {
      'author': 'Steven van Rossem, iMinds',
      'connection_points': <class 'BaseList'> [
        <class 'dict'> {
          'id': 'mgmt',
          'type': 'interface',
        },
        <class 'dict'> {
          'id': 'input',
          'type': 'interface',
        },
        <class 'dict'> {
          'id': 'output',
          'type': 'interface',
        },
      ],
      'description': '
        "A first firewall VNF descriptor"
  
      ',
      'descriptor_version': 'vnfd-schema-01',
      'monitoring_rules': <class 'BaseList'> [
        <class 'dict'> {
          'condition': 'vdu01:vm_cpu_perc > 10',
          'description': 'Trigger events if CPU load is above 10 percent.',
          'duration': 10,
          'duration_unit': 's',
          'name': 'mon:rule:vm_cpu_perc',
          'notification': <class 'list'> [
            <class 'dict'> {
              'name': 'notification01',
              'type': 'rabbitmq_message',
            },
          ],
        },
        <class 'dict'> {
          'condition': 'vdu01:vm_mem_perc > 10',
          'description': 'Trigger events if memory consumption is above 10 percent.',
          'duration': 10,
          'duration_unit': 's',
          'name': 'mon:rule:vm_mem_perc',
          'notification': <class 'list'> [
            <class 'dict'> {
              'name': 'notification02',
              'type': 'rabbitmq_message',
            },
          ],
        },
        <class 'dict'> {
          'condition': 'vdu01:vm_net_rx_MB > 10',
          'duration': 10,
          'duration_unit': 's',
          'name': 'mon:rule:rx',
          'notification': <class 'list'> [
            <class 'dict'> {
              'name': 'notification03',
              'type': 'rabbitmq_message',
            },
          ],
        },
        <class 'dict'> {
          'condition': 'vdu01:vm_net_tx_MB > 10',
          'duration': 10,
          'duration_unit': 's',
          'name': 'mon:rule:tx',
          'notification': <class 'list'> [
            <class 'dict'> {
              'name': 'notification04',
              'type': 'rabbitmq_message',
            },
          ],
        },
      ],
      'name': 'firewall-vnf',
      'uuid': '6a15313f-cb0a-4540-baa2-77cc6b3f5b68',
      'vendor': 'eu.sonata-nfv',
      'version': '0.2',
      'virtual_deployment_units': <class 'BaseList'> [
        <class 'dict'> {
          'connection_points': <class 'list'> [
            <class 'dict'> {
              'id': 'vdu01:eth0',
              'type': 'interface',
            },
            <class 'dict'> {
              'id': 'vdu01:eth1',
              'type': 'interface',
            },
            <class 'dict'> {
              'id': 'vdu01:eth2',
              'type': 'interface',
            },
          ],
          'id': 'vdu01',
          'monitoring_parameters': <class 'list'> [
            <class 'dict'> {
              'name': 'vm_cpu_perc',
              'unit': 'Percentage',
            },
            <class 'dict'> {
              'name': 'vm_mem_perc',
              'unit': 'Percentage',
            },
            <class 'dict'> {
              'name': 'vm_net_rx_MB',
              'unit': 'MB',
            },
            <class 'dict'> {
              'name': 'vm_net_tx_MB',
              'unit': 'Mbps',
            },
          ],
          'resource_requirements': <class 'dict'> {
            'cpu': <class 'dict'> {
              'vcpus': 1,
            },
            'memory': <class 'dict'> {
              'size': 2,
              'size_unit': 'GB',
            },
            'storage': <class 'dict'> {
              'size': 10,
              'size_unit': 'GB',
            },
          },
          'vm_image': 'http://registry.sonata-nfv.eu/html/files/VM_images/sonata-VM-2ports.qcow',
          'vm_image_format': 'qcow2',
        },
      ],
      'virtual_links': <class 'BaseList'> [
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vdu01:eth0',
            'mgmt',
          ],
          'connectivity_type': 'E-LAN',
          'dhcp': True,
          'id': 'mgmt',
        },
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vdu01:eth1',
            'input',
          ],
          'connectivity_type': 'E-Line',
          'dhcp': True,
          'id': 'input',
        },
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vdu01:eth2',
            'output',
          ],
          'connectivity_type': 'E-Line',
          'dhcp': True,
          'id': 'output',
        },
      ],
    },
    'id': '6a15313f-cb0a-4540-baa2-77cc6b3f5b68',
    'service_id': 'f86d5ec7-1a93-404d-80d1-e696369f8318',
    'vim': '87ecdc7c-665a-475a-b4f7-f053706ceb70',
  }
---
# name: test_deploy_vnfs.1
  <class 'dict'> {
    'descriptor': <class 'BaseDict'> {
      'author': 'Steven van Rossem, iMinds',
      'connection_points': <class 'BaseList'> [
        <class 'dict'> {
          'id': 'mgmt',
          'type': 'interface',
        },
        <class 'dict'> {
          'id': 'input',
          'type': 'interface',
        },
        <class 'dict'> {
          'id': 'output',
          'type': 'interface',
        },
      ],
      'description': '
        "A first iperf VNF descriptor. The iperf VNF
         acts as a traffic source."
  
      ',
      'descriptor_version': 'vnfd-schema-01',
      'name': 'iperf-vnf',
      'uuid': '645db4fa-a714-4cba-9617-4001477d1281',
      'vendor': 'eu.sonata-nfv',
      'version': '0.2',
      'virtual_deployment_units': <class 'BaseList'> [
        <class 'dict'> {
          'connection_points': <class 'list'> [
            <class 'dict'> {
              'id': 'vdu01:cp01',
              'type': 'interface',
            },
            <class 'dict'> {
              'id': 'vdu01:cp02',
              'type': 'interface',
            },
            <class 'dict'> {
              'id': 'vdu01:cp03',
              'type': 'interface',
            },
          ],
          'id': 'vdu01',
          'resource_requirements': <class 'dict'> {
            'cpu': <class 'dict'> {
              'vcpus': 1,
            },
            'memory': <class 'dict'> {
              'size': 2,
              'size_unit': 'GB',
            },
            'storage': <class 'dict'> {
              'size': 10,
              'size_unit': 'GB',
            },
          },
          'vm_image': 'file:///docker_files/iperf/Dockerfile',
          'vm_image_format': 'docker',
        },
      ],
      'virtual_links': <class 'BaseList'> [
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vdu01:cp01',
            'mgmt',
          ],
          'connectivity_type': 'E-LAN',
          'id': 'mgmt',
        },
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vdu01:cp02',
            'input',
          ],
          'connectivity_type': 'E-Line',
          'id': 'input',
        },
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vdu01:cp03',
            'output',
          ],
          'connectivity_type': 'E-Line',
          'id': 'output',
        },
      ],
    },
    'id': '645db4fa-a714-4cba-9617-4001477d1281',
    'service_id': 'f86d5ec7-1a93-404d-80d1-e696369f8318',
    'vim': '87ecdc7c-665a-475a-b4f7-f053706ceb70',
  }
---
# name: test_deploy_vnfs.2
  <class 'dict'> {
    'descriptor': <class 'BaseDict'> {
      'author': 'Steven van Rossem, iMinds',
      'connection_points': <class 'BaseList'> [
        <class 'dict'> {
          'id': 'mgmt',
          'type': 'interface',
        },
        <class 'dict'> {
          'id': 'input',
          'type': 'interface',
        },
        <class 'dict'> {
          'id': 'output',
          'type': 'interface',
        },
      ],
      'description': '
        "A first tcpdump VNF descriptor. The tcpdump
         VNF acts as a traffic sink."
  
      ',
      'descriptor_version': 'vnfd-schema-01',
      'name': 'tcpdump-vnf',
      'uuid': '8a0aa837-ec1c-44e5-9907-898f6401c3ae',
      'vendor': 'eu.sonata-nfv',
      'version': '0.2',
      'virtual_deployment_units': <class 'BaseList'> [
        <class 'dict'> {
          'connection_points': <class 'list'> [
            <class 'dict'> {
              'id': 'vdu01:cp01',
              'type': 'interface',
            },
            <class 'dict'> {
              'id': 'vdu01:cp02',
              'type': 'interface',
            },
            <class 'dict'> {
              'id': 'vdu01:cp03',
              'type': 'interface',
            },
          ],
          'id': 'vdu01',
          'resource_requirements': <class 'dict'> {
            'cpu': <class 'dict'> {
              'vcpus': 1,
            },
            'memory': <class 'dict'> {
              'size': 2,
              'size_unit': 'GB',
            },
            'storage': <class 'dict'> {
              'size': 10,
              'size_unit': 'GB',
            },
          },
          'vm_image': 'file:///docker_files/tcpdump/Dockerfile',
          'vm_image_format': 'docker',
        },
      ],
      'virtual_links': <class 'BaseList'> [
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vdu01:cp01',
            'mgmt',
          ],
          'connectivity_type': 'E-LAN',
          'id': 'mgmt',
        },
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vdu01:cp02',
            'input',
          ],
          'connectivity_type': 'E-Line',
          'id': 'input',
        },
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vdu01:cp03',
            'output',
          ],
          'connectivity_type': 'E-Line',
          'id': 'output',
        },
      ],
    },
    'id': '8a0aa837-ec1c-44e5-9907-898f6401c3ae',
    'service_id': 'f86d5ec7-1a93-404d-80d1-e696369f8318',
    'vim': '87ecdc7c-665a-475a-b4f7-f053706ceb70',
  }
---
# name: test_destroy_vnfs
  <class 'dict'> {
    'service_id': 'f86d5ec7-1a93-404d-80d1-e696369f8318',
  }
---
# name: test_fetch_placement
  <class 'dict'> {
    'functions': <class 'list'> [
      <class 'BaseDict'> {
        'author': 'Steven van Rossem, iMinds',
        'connection_points': <class 'BaseList'> [
          <class 'dict'> {
            'id': 'mgmt',
            'type': 'interface',
          },
          <class 'dict'> {
            'id': 'input',
            'type': 'interface',
          },
          <class 'dict'> {
            'id': 'output',
            'type': 'interface',
          },
        ],
        'description': '
          "A first firewall VNF descriptor"
  
        ',
        'descriptor_version': 'vnfd-schema-01',
        'monitoring_rules': <class 'BaseList'> [
          <class 'dict'> {
            'condition': 'vdu01:vm_cpu_perc > 10',
            'description': 'Trigger events if CPU load is above 10 percent.',
            'duration': 10,
            'duration_unit': 's',
            'name': 'mon:rule:vm_cpu_perc',
            'notification': <class 'list'> [
              <class 'dict'> {
                'name': 'notification01',
                'type': 'rabbitmq_message',
              },
            ],
          },
          <class 'dict'> {
            'condition': 'vdu01:vm_mem_perc > 10',
            'description': 'Trigger events if memory consumption is above 10 percent.',
            'duration': 10,
            'duration_unit': 's',
            'name': 'mon:rule:vm_mem_perc',
            'notification': <class 'list'> [
              <class 'dict'> {
                'name': 'notification02',
                'type': 'rabbitmq_message',
              },
            ],
          },
          <class 'dict'> {
            'condition': 'vdu01:vm_net_rx_MB > 10',
            'duration': 10,
            'duration_unit': 's',
            'name': 'mon:rule:rx',
            'notification': <class 'list'> [
              <class 'dict'> {
                'name': 'notification03',
                'type': 'rabbitmq_message',
              },
            ],
          },
          <class 'dict'> {
            'condition': 'vdu01:vm_net_tx_MB > 10',
            'duration': 10,
            'duration_unit': 's',
            'name': 'mon:rule:tx',
            'notification': <class 'list'> [
              <class 'dict'> {
                'name': 'notification04',
                'type': 'rabbitmq_message',
              },
            ],
          },
        ],
        'name': 'firewall-vnf',
        'uuid': '6a15313f-cb0a-4540-baa2-77cc6b3f5b68',
        'vendor': 'eu.sonata-nfv',
        'version': '0.2',
        'virtual_deployment_units': <class 'BaseList'> [
          <class 'dict'> {
            'connection_points': <class 'list'> [
              <class 'dict'> {
                'id': 'vdu01:eth0',
                'type': 'interface',
              },
              <class 'dict'> {
                'id': 'vdu01:eth1',
                'type': 'interface',
              },
              <class 'dict'> {
                'id': 'vdu01:eth2',
                'type': 'interface',
              },
            ],
            'id': 'vdu01',
            'monitoring_parameters': <class 'list'> [
              <class 'dict'> {
                'name': 'vm_cpu_perc',
                'unit': 'Percentage',
              },
              <class 'dict'> {
                'name': 'vm_mem_perc',
                'unit': 'Percentage',
              },
              <class 'dict'> {
                'name': 'vm_net_rx_MB',
                'unit': 'MB',
              },
              <class 'dict'> {
                'name': 'vm_net_tx_MB',
                'unit': 'Mbps',
              },
            ],
            'resource_requirements': <class 'dict'> {
              'cpu': <class 'dict'> {
                'vcpus': 1,
              },
              'memory': <class 'dict'> {
                'size': 2,
                'size_unit': 'GB',
              },
              'storage': <class 'dict'> {
                'size': 10,
                'size_unit': 'GB',
              },
            },
            'vm_image': 'http://registry.sonata-nfv.eu/html/files/VM_images/sonata-VM-2ports.qcow',
            'vm_image_format': 'qcow2',
          },
        ],
        'virtual_links': <class 'BaseList'> [
          <class 'dict'> {
            'connection_points_reference': <class 'list'> [
              'vdu01:eth0',
              'mgmt',
            ],
            'connectivity_type': 'E-LAN',
            'dhcp': True,
            'id': 'mgmt',
          },
          <class 'dict'> {
            'connection_points_reference': <class 'list'> [
              'vdu01:eth1',
              'input',
            ],
            'connectivity_type': 'E-Line',
            'dhcp': True,
            'id': 'input',
          },
          <class 'dict'> {
            'connection_points_reference': <class 'list'> [
              'vdu01:eth2',
              'output',
            ],
            'connectivity_type': 'E-Line',
            'dhcp': True,
            'id': 'output',
          },
        ],
      },
      <class 'BaseDict'> {
        'author': 'Steven van Rossem, iMinds',
        'connection_points': <class 'BaseList'> [
          <class 'dict'> {
            'id': 'mgmt',
            'type': 'interface',
          },
          <class 'dict'> {
            'id': 'input',
            'type': 'interface',
          },
          <class 'dict'> {
            'id': 'output',
            'type': 'interface',
          },
        ],
        'description': '
          "A first iperf VNF descriptor. The iperf VNF
           acts as a traffic source."
  
        ',
        'descriptor_version': 'vnfd-schema-01',
        'name': 'iperf-vnf',
        'uuid': '645db4fa-a714-4cba-9617-4001477d1281',
        'vendor': 'eu.sonata-nfv',
        'version': '0.2',
        'virtual_deployment_units': <class 'BaseList'> [
          <class 'dict'> {
            'connection_points': <class 'list'> [
              <class 'dict'> {
                'id': 'vdu01:cp01',
                'type': 'interface',
              },
              <class 'dict'> {
                'id': 'vdu01:cp02',
                'type': 'interface',
              },
              <class 'dict'> {
                'id': 'vdu01:cp03',
                'type': 'interface',
              },
            ],
            'id': 'vdu01',
            'resource_requirements': <class 'dict'> {
              'cpu': <class 'dict'> {
                'vcpus': 1,
              },
              'memory': <class 'dict'> {
                'size': 2,
                'size_unit': 'GB',
              },
              'storage': <class 'dict'> {
                'size': 10,
                'size_unit': 'GB',
              },
            },
            'vm_image': 'file:///docker_files/iperf/Dockerfile',
            'vm_image_format': 'docker',
          },
        ],
        'virtual_links': <class 'BaseList'> [
          <class 'dict'> {
            'connection_points_reference': <class 'list'> [
              'vdu01:cp01',
              'mgmt',
            ],
            'connectivity_type': 'E-LAN',
            'id': 'mgmt',
          },
          <class 'dict'> {
            'connection_points_reference': <class 'list'> [
              'vdu01:cp02',
              'input',
            ],
            'connectivity_type': 'E-Line',
            'id': 'input',
          },
          <class 'dict'> {
            'connection_points_reference': <class 'list'> [
              'vdu01:cp03',
              'output',
            ],
            'connectivity_type': 'E-Line',
            'id': 'output',
          },
        ],
      },
      <class 'BaseDict'> {
        'author': 'Steven van Rossem, iMinds',
        'connection_points': <class 'BaseList'> [
          <class 'dict'> {
            'id': 'mgmt',
            'type': 'interface',
          },
          <class 'dict'> {
            'id': 'input',
            'type': 'interface',
          },
          <class 'dict'> {
            'id': 'output',
            'type': 'interface',
          },
        ],
        'description': '
          "A first tcpdump VNF descriptor. The tcpdump
           VNF acts as a traffic sink."
  
        ',
        'descriptor_version': 'vnfd-schema-01',
        'name': 'tcpdump-vnf',
        'uuid': '8a0aa837-ec1c-44e5-9907-898f6401c3ae',
        'vendor': 'eu.sonata-nfv',
        'version': '0.2',
        'virtual_deployment_units': <class 'BaseList'> [
          <class 'dict'> {
            'connection_points': <class 'list'> [
              <class 'dict'> {
                'id': 'vdu01:cp01',
                'type': 'interface',
              },
              <class 'dict'> {
                'id': 'vdu01:cp02',
                'type': 'interface',
              },
              <class 'dict'> {
                'id': 'vdu01:cp03',
                'type': 'interface',
              },
            ],
            'id': 'vdu01',
            'resource_requirements': <class 'dict'> {
              'cpu': <class 'dict'> {
                'vcpus': 1,
              },
              'memory': <class 'dict'> {
                'size': 2,
                'size_unit': 'GB',
              },
              'storage': <class 'dict'> {
                'size': 10,
                'size_unit': 'GB',
              },
            },
            'vm_image': 'file:///docker_files/tcpdump/Dockerfile',
            'vm_image_format': 'docker',
          },
        ],
        'virtual_links': <class 'BaseList'> [
          <class 'dict'> {
            'connection_points_reference': <class 'list'> [
              'vdu01:cp01',
              'mgmt',
            ],
            'connectivity_type': 'E-LAN',
            'id': 'mgmt',
          },
          <class 'dict'> {
            'connection_points_reference': <class 'list'> [
              'vdu01:cp02',
              'input',
            ],
            'connectivity_type': 'E-Line',
            'id': 'input',
          },
          <class 'dict'> {
            'connection_points_reference': <class 'list'> [
              'vdu01:cp03',
              'output',
            ],
            'connectivity_type': 'E-Line',
            'id': 'output',
          },
        ],
      },
    ],
    'nap': <class 'dict'> {
    },
    'nsd': <class 'BaseDict'> {
      'author': 'Michael Bredel, NEC Labs Europe',
      'connection_points': <class 'BaseList'> [
        <class 'dict'> {
          'id': 'ns:mgmt',
          'type': 'interface',
        },
        <class 'dict'> {
          'id': 'ns:input',
          'type': 'interface',
        },
        <class 'dict'> {
          'id': 'ns:output',
          'type': 'interface',
        },
      ],
      'description': '
        "The network service descriptor for the SONATA demo,
         comprising iperf, a firewall, and tcpdump."
  
      ',
      'descriptor_version': '2.0',
      'forwarding_graphs': <class 'BaseList'> [
        <class 'dict'> {
          'constituent_virtual_links': <class 'list'> [
            'mgmt',
            'input-2-iperf',
            'iperf-2-firewall',
            'firewall-2-tcpdump',
            'tcpdump-2-output',
          ],
          'constituent_vnfs': <class 'list'> [
            'vnf_iperf',
            'vnf_firewall',
            'vnf_tcpdump',
          ],
          'fg_id': 'ns:fg01',
          'network_forwarding_paths': <class 'list'> [
            <class 'dict'> {
              'connection_points': <class 'list'> [
                <class 'dict'> {
                  'connection_point_ref': 'ns:input',
                  'position': 1,
                },
                <class 'dict'> {
                  'connection_point_ref': 'vnf_iperf:input',
                  'position': 2,
                },
                <class 'dict'> {
                  'connection_point_ref': 'vnf_iperf:output',
                  'position': 3,
                },
                <class 'dict'> {
                  'connection_point_ref': 'vnf_firewall:input',
                  'position': 4,
                },
                <class 'dict'> {
                  'connection_point_ref': 'vnf_firewall:output',
                  'position': 5,
                },
                <class 'dict'> {
                  'connection_point_ref': 'vnf_tcpdump:input',
                  'position': 6,
                },
                <class 'dict'> {
                  'connection_point_ref': 'vnf_tcpdump:output',
                  'position': 7,
                },
                <class 'dict'> {
                  'connection_point_ref': 'ns:output',
                  'position': 8,
                },
              ],
              'fp_id': 'ns:fg01:fp01',
              'policy': 'none',
            },
          ],
          'number_of_endpoints': 2,
          'number_of_virtual_links': 4,
        },
      ],
      'name': 'sonata-demo',
      'network_functions': <class 'BaseList'> [
        <class 'dict'> {
          'vnf_id': 'vnf_firewall',
          'vnf_name': 'firewall-vnf',
          'vnf_vendor': 'eu.sonata-nfv',
          'vnf_version': '0.1',
        },
        <class 'dict'> {
          'vnf_id': 'vnf_iperf',
          'vnf_name': 'iperf-vnf',
          'vnf_vendor': 'eu.sonata-nfv',
          'vnf_version': '0.1',
        },
        <class 'dict'> {
          'vnf_id': 'vnf_tcpdump',
          'vnf_name': 'tcpdump-vnf',
          'vnf_vendor': 'eu.sonata-nfv',
          'vnf_version': '0.1',
        },
      ],
      'uuid': '005606ed-be7d-4ce3-983c-847039e3a5a2',
      'vendor': 'eu.sonata-nfv.service-descriptor',
      'version': '0.2',
      'virtual_links': <class 'BaseList'> [
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vnf_iperf:mgmt',
            'vnf_firewall:mgmt',
            'vnf_tcpdump:mgmt',
            'ns:mgmt',
          ],
          'connectivity_type': 'E-LAN',
          'id': 'mgmt',
        },
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'ns:input',
            'vnf_iperf:input',
          ],
          'connectivity_type': 'E-Line',
          'id': 'input-2-iperf',
        },
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vnf_iperf:output',
            'vnf_firewall:input',
          ],
          'connectivity_type': 'E-Line',
          'id': 'iperf-2-firewall',
        },
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vnf_firewall:output',
            'vnf_tcpdump:input',
          ],
          'connectivity_type': 'E-Line',
          'id': 'firewall-2-tcpdump',
        },
        <class 'dict'> {
          'connection_points_reference': <class 'list'> [
            'vnf_firewall:output',
            'ns:output',
          ],
          'connectivity_type': 'E-Line',
          'id': 'tcpdump-2-output',
        },
      ],
    },
    'serv_id': 'f86d5ec7-1a93-404d-80d1-e696369f8318',
    'topology': <class 'list'> [
    ],
  }
---
# name: test_prepare_infrastructure
  <class 'dict'> {
    'instance_id': 'f86d5ec7-1a93-404d-80d1-e696369f8318',
    'vims': <class 'list'> [
      <class 'dict'> {
        'id': '87ecdc7c-665a-475a-b4f7-f053706ceb70',
        'vm_images': <class 'list'> [
          <class 'list'> [
            <class 'dict'> {
              'id': 'eu.sonata-nfv_firewall-vnf_0.2_vdu01',
              'md5': None,
              'url': 'http://registry.sonata-nfv.eu/html/files/VM_images/sonata-VM-2ports.qcow',
            },
          ],
          <class 'list'> [
            <class 'dict'> {
              'id': 'eu.sonata-nfv_iperf-vnf_0.2_vdu01',
              'md5': None,
              'url': 'file:///docker_files/iperf/Dockerfile',
            },
          ],
          <class 'list'> [
            <class 'dict'> {
              'id': 'eu.sonata-nfv_tcpdump-vnf_0.2_vdu01',
              'md5': None,
              'url': 'file:///docker_files/tcpdump/Dockerfile',
            },
          ],
        ],
      },
    ],
  }
---
